package factory.simplefactory.pizzastore.pizza;
public class GreekPizza extends Pizza {

    @Override
    public void prepare() {
        // TODO Auto-generated method stub
        System.out.println("給 Greek 準備材料.... ");
    }
    
}