package factory.simplefactory.pizzastore.pizza;
public class PepperPizza extends Pizza {

    @Override
    public void prepare() {
        // TODO Auto-generated method stub
        System.out.println("給 Pepper 準備材料.... ");
    }
    
}