@startuml
class Pizza {
    + void prepare()
    + void bake()
    + void cut()
    + void box()
}

class CheessPizza extends Pizza {

}
class GreekPizza extends Pizza {
    
}
class PepperPizza extends Pizza {
    
}

class SimpleFactory {

}

class OrderPizza {

}
class OrderPizza2 {
    
}
class OrderPizza3 {
    
}

OrderPizza o-- SimpleFactory
OrderPizza2 o-- SimpleFactory
OrderPizza3 o-- SimpleFactory
@enduml